--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
   db:
     image: postgres
     restart: always
-    environment:
-      - DB_PASS=postgres
+    ports:
+      - 5432:5432
   adminer:
     image: adminer
     restart: always
