--- a/package.json
+++ b/package.json
@@ -10,5 +10,15 @@
     "knex"
   ],
   "author": "Manuel F. Del Toro",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "knex": "^0.15.2",
+    "pg": "^7.4.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.3",
+    "standard": "^11.0.1"
+  }
 }
