--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Project to use Knex.js",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js",
+    "sfs-offline": "serverless offline start --stage dev --port 3001",
+    "db": "knex migrate:rollback && knex migrate:latest && knex seed:run"
   },
   "keywords": [
     "knex"
@@ -13,12 +15,16 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "knex": "^0.15.2",
-    "pg": "^7.4.3"
+    "knex-populate": "^2.1.2",
+    "pg": "^7.4.3",
+    "serverless-http": "^1.6.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3",
+    "serverless-offline": "^3.25.6",
     "standard": "^11.0.1"
   }
 }
